# Blossom_Music-gen

./: .gitignore  AGENTS.md  README.md  arrange_config.json  blossom.py  combat_tracker.py  discord_bot.py  embedding_index.py  frontmatter.py  main_musicgen.py  main_render.py  main_stems.py  menu.py  mini_yaml.py  package-lock.json  package.json  pyproject.toml  render_config.json  requirements-gpu-cu118.txt  requirements-gpu-cu121.txt  requirements-riffusion.txt  requirements.txt  screen.jsx  service_api.py  service_inventory.py  session_export.py  song.json  start.py  tester.py  theory.py  ui.py  watcher.py  yaml.py
.git-rewrite/: backup-refs  commit  index  message  parse  revs
_numpy_stub/: __init__.py
benchmarks/: render_baseline.json
blossom/: __init__.py
brain/: __init__.py  constants.py  dialogue.py  dnd_chat.py  events.py  obsidian_parser.py  ollama_client.py  orchestrator.py  prompt_router.py  voice_orchestrator.py
cache/: usage_metrics.json
config/: __init__.py  discord.py  discord.yaml  discord_accounts.json  discord_profiles.py  discord_token.py  obsidian.py  obsidian_vault.txt  openai_api.py  secrets.py
core/: __init__.py  arranger.py  dynamics.py  eval_metrics.py  event_vocab.py  loudness.py  main_patterns.py  main_synth.py  midi_export.py  midi_load.py  mixer.py  musicgen_backend.py  onnx_crafter_service.py  paths.py  pattern_synth.py  patterns.py  phrase_model.py  preset.py  render.py  render_hash.py  sampling.py  sfz_sampler.py  song_spec.py  song_templates.py  stems.py  style.py  synth.py  theory.py  utils.py
data/: build_dataset.py  dataset_stats.py  discord_control.json  voices.json  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/voice_models/: README.txt
src-tauri/data/: voices.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  dnd_watcher.rs  main.rs  musiclang.rs  util.rs
(+501 files in other folders)
