[package]
name = "blossom_tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1", features = ["dialog", "shell-open-api"] }
regex = "1"
tempfile = "3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[build-dependencies]
tauri-build = { version = "1", features = [] }
