[package]
name = "blossom_tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
regex = "1"
tempfile = "3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-opener = "2.4.0"
tauri-plugin-store = "2"
url = "2"
futures-sink = "0.3.31"

[build-dependencies]
tauri-build = { version = "2", features = [] }
