[package]
name = "blossom_tauri"
version = "0.5.5"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
regex = "1"
tempfile = "3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tauri-plugin-dialog = { version = "2.0.0-rc.8" }
tauri-plugin-opener = { version = "2.0.0-rc.8" }
tauri-plugin-store = { version = "2.0.0-rc.8" }
tauri-plugin-shell = "2"
tauri-plugin-fs = { version = "2.0.0-rc.8" }
url = "2"
futures-sink = "0.3.31"
tokio = { version = "1", features = ["time"] }
serde_yaml = "0.9"
walkdir = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
